:bug: fix: no Author (#20)
